# VideoCue

./: .gitignore  .mailmap  .pylintrc  .pyrightignore  ATTRIBUTION.md  BUILD_GUIDE.md  CODE_REVIEW.md  CONTRIBUTING.md  Install-NDI-SDK.ps1  LICENSE  LOCAL_BUILD_TESTING.md  NDI_GITHUB_ACTIONS.md  NDI_WRAPPER_BUILD.md  NDI_WRAPPER_INTEGRATION.md  PORTABLE_README.txt  QUICKSTART.md  README.md  SECURITY.md  VideoCue.spec  build.ps1  build_linux.sh  build_macos.sh  build_ndi_wrapper.ps1  config_schema.json  installer.iss  pyrightconfig.json  requirements-build.lock.txt  requirements.txt  ruff.toml  videocue.py
.github/: copilot-instructions.md
.github/workflows/: README.md  build-ci.yml  build-release-new.yml  build-release.yml  rebuild-ndi-manual.yml  rebuild-ndi-wrapper.yml
hooks/: hook-videocue.ndi_wrapper.py
tools/: ndi_first_camera_memory_test.py  ndi_first_camera_ui_test.py  verify_runtime_dlls.ps1
videocue/: __init__.py  constants.py  exceptions.py  ui_strings.py  utils.py
videocue/controllers/: ndi_video.py  streamdeck_controller.py  streamdeck_init.py  usb_controller.py  visca_commands.py  visca_ip.py
videocue/models/: config_manager.py  cue_manager.py  video.py
videocue/ndi_wrapper/: .gitignore  CMakeLists.txt  INTEGRATION_COMPLETE.md  LICENSE.md  NDIlib.cp310-win_amd64.pyd  NDIlib.cp312-win_amd64.pyd  README.md  README_BUILD.md  __init__.py
videocue/ndi_wrapper/src/: main.cpp
videocue/ui/: about_dialog.py  camera_add_dialog.py  camera_widget.py  controller_preferences_dialog.py  main_window.py  network_interface_dialog.py  preferences_dialog.py  update_check_thread.py
videocue/utils/: __init__.py  network_interface.py
